metadata/force-app/main/default/objects/Database_Downtime__c/Database_Downtime__c.object-meta.xml
<CustomObject>
    <label>Database Downtime</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Database Downtime Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Database Downtimes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>