metadata/force-app/main/default/objects/Database_Downtime__c/fields/Database__c.field-meta.xml
<CustomField>
    <fullName>Database__c</fullName>
    <label>Database</label>
    <referenceTo>Database__c</referenceTo>
    <relationshipLabel>Database Downtimes</relationshipLabel>
    <relationshipName>Database_Downtimes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>