metadata/force-app/main/default/objects/Database_Downtime__c/fields/Downtime_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Downtime_End_Date__c</fullName>
    <formula>DATETIMEVALUE(&quot;1970-01-01 00:00:00&quot;) + 
(Downtime_End_Unix_ms__c ) / 86400000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Downtime End Date</label>
    <type>DateTime</type>
</CustomField>