metadata/force-app/main/default/objects/Database_Downtime__c/fields/Downtime_End_Month__c.field-meta.xml
<CustomField>
    <fullName>Downtime_End_Month__c</fullName>
    <formula>MONTH(DATEVALUE(Downtime_End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Downtime End Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>