metadata/force-app/main/default/objects/Database_Downtime__c/fields/Downtime_End_Unix_ms__c.field-meta.xml
<CustomField>
    <fullName>Downtime_End_Unix_ms__c</fullName>
    <description>When downtime ended, the downtime record was created at this time in New Relic</description>
    <inlineHelpText>When downtime ended, the downtime record was created at this time in New Relic</inlineHelpText>
    <label>Downtime End Unix ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>