metadata/force-app/main/default/objects/Database_Downtime__c/fields/Downtime_InActive_Date__c.field-meta.xml
<CustomField>
    <fullName>Downtime_InActive_Date__c</fullName>
    <formula>DATE(
year(DATEVALUE(Downtime_End_Date__c))
+ floor((month(DATEVALUE(Downtime_End_Date__c)) + 10)/12) + if(and(month(DATEVALUE(Downtime_End_Date__c))=12,10&gt;=12),-1,0)
,
if( mod( month(DATEVALUE(Downtime_End_Date__c)) + 10 , 12 ) = 0, 12 , mod( month(DATEVALUE(Downtime_End_Date__c)) + 10 , 12 ))
,
CASE(if( mod( month(DATEVALUE(Downtime_End_Date__c)) + 10 , 12 ) = 0, 12 , mod( month(DATEVALUE(Downtime_End_Date__c)) + 10 , 12 )),
9,30,
4,30,
6,30,
11,30,
2,28,
31
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Downtime InActive Date</label>
    <type>Date</type>
</CustomField>