metadata/force-app/main/default/objects/Database_Downtime__c/fields/Downtime_s_February__c.field-meta.xml
<CustomField>
    <fullName>Downtime_s_February__c</fullName>
    <formula>IF(AND( 
Downtime_Start_Month__c=2, 
Downtime_End_Month__c=2), 
Duration_s__c, 

IF(AND(
Downtime_Start_Month__c=2, 
Downtime_End_Month__c=3), 

(DATETIMEVALUE((TEXT(YEAR(DATEVALUE(Downtime_Start_Date__c)))&amp;&quot;-02-&quot;&amp;TEXT(IF( MOD(YEAR(DATEVALUE(Downtime_Start_Date__c)) , 4) = 0,29,28))&amp; &quot; 23:00:00.000&quot;))-(Downtime_Start_Date__c))*86400, 

IF(AND(
Downtime_Start_Month__c=1, 
Downtime_End_Month__c=2), 

((Downtime_End_Date__c)-DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Downtime_Start_Date__c)))&amp;&quot;-01-31 23:00:00.000&quot;))*86400, 

0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Downtime (s) - February</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>