metadata/force-app/main/default/objects/Database_Downtime__c/fields/Downtime_s_July_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Downtime_s_July_Mapped__c</fullName>
    <label>Downtime (s) - July - Mapped</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>