metadata/force-app/main/default/objects/Database_Downtime__c/fields/Downtime_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Downtime_Start_Year__c</fullName>
    <formula>YEAR(DATEVALUE(Downtime_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Downtime Start Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>