metadata/force-app/main/default/objects/Database_Downtime__c/fields/Downtime_this_month__c.field-meta.xml
<CustomField>
    <fullName>Downtime_this_month__c</fullName>
    <formula>IF( 
Downtime_Start_Month__c=Downtime_End_Month__c,
Duration_s__c, 

IF( 
Downtime_Start_Month__c&lt;MONTH(TODAY()),

((Downtime_End_Date__c)-

(DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Downtime_End_Date__c)))&amp;


CASE(Downtime_Start_Month__c,
1,&quot;-01-31 23:00:00.000&quot;,
2,IF( MOD(YEAR(DATEVALUE(Downtime_Start_Date__c)) , 4) = 0,&quot;-02-29 23:00:00.000&quot;,&quot;-02-28 23:00:00.000&quot;),
3,&quot;-03-31 22:00:00.000&quot;,
4,&quot;-04-30 22:00:00.000&quot;,
5,&quot;-05-31 22:00:00.000&quot;,
6,&quot;-06-30 22:00:00.000&quot;,
7,&quot;-07-31 22:00:00.000&quot;,
8,&quot;-08-31 22:00:00.000&quot;,
9,&quot;-09-30 22:00:00.000&quot;,
10,&quot;-10-31 23:00:00.000&quot;,
11,&quot;-11-30 23:00:00.000&quot;,
12,&quot;-12-31 23:00:00.000&quot;,&quot;&quot;))
))*86400, 

0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Downtime this month</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>