metadata/force-app/main/default/objects/Database_Downtime__c/fields/Downtime_this_month_mapped__c.field-meta.xml
<CustomField>
    <fullName>Downtime_this_month_mapped__c</fullName>
    <label>Downtime this month mapped</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>