metadata/force-app/main/default/objects/Database_Downtime__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Downtime duration in milliseconds.</description>
    <inlineHelpText>Downtime duration in milliseconds.</inlineHelpText>
    <label>Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>