metadata/force-app/main/default/objects/Database_Downtime__c/fields/Duration_s__c.field-meta.xml
<CustomField>
    <fullName>Duration_s__c</fullName>
    <formula>Duration__c/1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (s)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>