metadata/force-app/main/default/objects/Database_Downtime__c/fields/Flow_Database_Downtime_and_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Flow_Database_Downtime_and_IsActive__c</fullName>
    <description>Equals true when the database downtime is active either this month or this year.</description>
    <formula>IF(
  OR(
    IsActive_this_month__c = TRUE,
    IsActive_this_year__c = TRUE),
  TRUE,
  FALSE)</formula>
    <label>Flow: Database Downtime and IsActive</label>
    <type>Checkbox</type>
</CustomField>