metadata/force-app/main/default/objects/Database_Downtime__c/fields/IsActive_this_month__c.field-meta.xml
<CustomField>
    <fullName>IsActive_this_month__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by workflow when downtime occurs within this month. Used by roll-up field.</description>
    <inlineHelpText>Is this downtime for the current calendar month</inlineHelpText>
    <label>IsActive - this month</label>
    <type>Checkbox</type>
</CustomField>