metadata/force-app/main/default/objects/Database_Downtime__c/fields/IsActive_this_year__c.field-meta.xml
<CustomField>
    <fullName>IsActive_this_year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by workflow when downtime occurs within the last 10 months. Used by roll-up field.</description>
    <inlineHelpText>Is this downtime within the last 10 months.</inlineHelpText>
    <label>IsActive - this year</label>
    <type>Checkbox</type>
</CustomField>