metadata/force-app/main/default/objects/Database_Downtime__c/fields/Last_Day_of_the_Month_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_the_Month_End_Time__c</fullName>
    <formula>DATEVALUE(TEXT(YEAR(DATEVALUE((Downtime_End_Date__c))))&amp;&quot;-&quot;&amp; TEXT(MONTH(DATEVALUE(Downtime_End_Date__c)))&amp;&quot;-&quot;&amp;

TEXT(CASE(Downtime_End_Month__c,
1, 31,
2, IF( MOD(YEAR(DATEVALUE(Downtime_End_Date__c)) , 4) = 0,29,28),
3, 31,
4, 30,
5, 31,
6, 30,
7, 31,
8, 31,
9, 30,
10, 31,
11, 30,
12, 31,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day of the Month - End time</label>
    <type>Date</type>
</CustomField>