metadata/force-app/main/default/objects/Database_Downtime__c/fields/Trigger_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Trigger_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle on and off to trigger is active process</description>
    <inlineHelpText>Toggle on and off to trigger is active process</inlineHelpText>
    <label>Trigger - IsActive</label>
    <type>Checkbox</type>
</CustomField>